deployments/k8s/base/services/fleet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-service
  namespace: craftcloud-system
  labels:
    app: fleet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-service
  template:
    metadata:
      labels:
        app: fleet-service
    spec:
      serviceAccountName: fleet-service-sa
      containers:
        - name: fleet-service
          image: fleet-api-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
